--- a/style.css
+++ b/style.css
@@ -174,6 +174,7 @@ section {
   height: 400px;
   width: 400px;
   margin: auto 0;
+  border-radius: 50%;
 }
 
 .section__text {
@@ -209,10 +210,28 @@ section {
 /* ICONS */
 
 .icon {
-  cursor: pointer;
-  height: 2rem;
+    cursor: pointer;
+    height: 3rem;
+    width: 3rem;
+    margin-left: 0.2rem;
+    transition: transform 0.5s ease;
 }
 
+.icon4 {
+    cursor: pointer;
+    height: 3rem;
+    width: 3rem;
+    margin-left: 0.3rem;
+    transition: transform 0.5s ease;
+}
+
+.icon:hover {
+    transform: scale(1.2);
+}
+
+.icon4:hover {
+    transform: scale(1.2);
+}
 /* BUTTONS */
 
 .btn-container {
