--- a/style.css
+++ b/style.css
@@ -459,25 +459,39 @@ article .icon {
 .color-container {
     border-color: rgb(163, 163, 163);
     background: rgb(250, 250, 250);
+    height: 30%;
 }
 
 .project-container {
     display: flex;
-    flex-direction: column; /* Make it a column layout */
-    align-items: center; /* Center content horizontally */
+    flex-direction: column; 
+    align-items: center; 
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     padding: 1.5rem;
-    margin-bottom: 2rem; /* Add some margin between projects */
+    margin-bottom: 2rem; 
     text-align: center;
+    transition: all 1s ease-in-out;
+    
 }
+
+
+.project-container:hover {
+    transform: scale(1.05); 
+}
+
+
+.no-hover {
+    transform: none !important; 
+}
+
 
 .project-img {
     border-radius: 2rem;
-    max-width: 100%; /* Ensure the image fits within the container */
-    max-height: 100%; /* Ensure the image fits within the container */
-    margin: 1rem 0; /* Add some margin to the image */
+    max-width: 100%; 
+    max-height: 100%; 
+    margin: 1rem 0; 
 }
 
 .project-title {
