--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ section {
 
 .section__pic-container-profile:hover {
     transform: scale(1.1);
-  
+
 }
 
 
@@ -260,7 +260,8 @@ section {
     border-radius: 2rem;
     transition: all 0.5s ease-in-out;
 }
-.btn:hover{
+
+.btn:hover {
     transform: scale(1.2rem);
 
 }
@@ -274,7 +275,7 @@ section {
 .btn-color-1:hover,
 .btn-color-2:hover {
     cursor: pointer;
-    
+
 }
 
 .btn-color-1,
@@ -351,12 +352,15 @@ section {
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     text-align: center;
-    transition: transform 0.5s ease-in-out; /* Added transition property */
+    transition: transform 0.5s ease-in-out;
+    /* Added transition property */
 }
 
 .details-container:hover {
-    transform: scale(1.05); /* Scale on hover */
-    z-index: 1; /* Ensure scaling is visible */
+    transform: scale(1.05);
+    /* Scale on hover */
+    z-index: 1;
+    /* Ensure scaling is visible */
 }
 
 
@@ -374,11 +378,14 @@ section {
     margin-top: auto;
     margin-bottom: auto;
     margin-left: 30px;
-    transition: transform 0.5s ease-in-out; 
+    transition: transform 0.5s ease-in-out;
 }
-.section__pic-container:hover{
-    transform: scale(1.05); /* Scale on hover */
-    z-index: 1; /* Ensure scaling is visible */
+
+.section__pic-container:hover {
+    transform: scale(1.05);
+    /* Scale on hover */
+    z-index: 1;
+    /* Ensure scaling is visible */
 }
 
 /* EXPERIENCE SECTION */
@@ -468,34 +475,34 @@ article .icon {
 
 .project-container {
     display: flex;
-    flex-direction: column; 
-    align-items: center; 
+    flex-direction: column;
+    align-items: center;
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: rgb(163, 163, 163);
     padding: 1.5rem;
-    margin-bottom: 2rem; 
+    margin-bottom: 2rem;
     text-align: center;
     transition: all 1s ease-in-out;
-    
+
 }
 
 
 .project-container:hover {
-    transform: scale(1.05); 
+    transform: scale(1.05);
 }
 
 
 .no-hover {
-    transform: none !important; 
+    transform: none !important;
 }
 
 
 .project-img {
     border-radius: 2rem;
-    max-width: 100%; 
-    max-height: 100%; 
-    margin: 1rem 0; 
+    max-width: 100%;
+    max-height: 100%;
+    margin: 1rem 0;
 }
 
 .project-title {
@@ -516,28 +523,37 @@ article .icon {
     height: 70vh;
     margin-top: 20rem;
 }
+
+.contactContainer {
+    margin-top: 3rem;
+}
+
 .contactRow {
     display: flex;
-    justify-content: space-between; /* Spread the contact-left and contact-right */
+    justify-content: space-between;
 }
 
 .contact-left {
-    flex: 1; /* Take up available space */
-    padding: 20px; /* Adjust padding as needed */
+    flex: 1;
+    padding: 20px;
     flex-basis: 35%;
-    
-}
-.contact-left h1{
-    text-align: center;
+
+
 }
 
-#download-cv{
+.contact-left h1 {
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+#download-cv {
     display: flex;
     justify-content: center;
     margin-top: 2rem;
 }
 
-#download-cv a{
+/* Download CV Button */
+#download-cv a {
     font-weight: 600;
     transition: all 300ms ease;
     padding: 1rem;
@@ -545,7 +561,8 @@ article .icon {
     border-radius: 2rem;
     transition: all 0.5s ease-in-out;
 }
-#download-cv a:hover{
+
+#download-cv a:hover {
     transform: scale(1.2rem);
     text-decoration: none;
     color: aliceblue;
@@ -554,10 +571,41 @@ article .icon {
 
 
 .contact-right {
-    flex: 1; /* Take up available space */
-    padding: 20px; /* Adjust padding as needed */
+    flex: 1;
+    /* Take up available space */
+    padding: 20px;
+    /* Adjust padding as needed */
     flex-basis: 60%;
 }
+
+.contact-right form{
+    width: 100%;
+}
+
+form input, form textarea{
+    width: 100%;
+
+}
+
+
+/* Submit Button */
+
+.submitButton button {
+    font-weight: 600;
+    transition: all 300ms ease;
+    padding: 1rem;
+    width: 9rem;
+    border-radius: 2rem;
+    transition: all 0.5s ease-in-out;
+}
+
+.submitButton button:hover {
+    transform: scale(1.2rem);
+    text-decoration: none;
+    color: aliceblue;
+
+}
+
 
 
 
