--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -125,6 +125,8 @@
   }
 }
 
+
+
 /* For screens up to 480px wide  */
 @media screen and (max-width: 480px) {
   /* Adjust styles for small screens */
@@ -140,6 +142,7 @@
   }
   .section__pic-container {
     width: 100%;
+    max-width: 100%; /* Ensure the image doesn't exceed the viewport width */
     height: auto;
     margin: 0 auto 2rem;
   }
