--- a/styleWeb.css
+++ b/styleWeb.css
@@ -38,7 +38,7 @@ p {
 
 /* TRANSITION */
 
-a{
+a {
     transition: all 300ms ease;
 }
 
@@ -49,25 +49,27 @@ a{
     margin-left: 5rem;
     background-color: white;
     transition: transform 0.5s ease;
-    
+
 }
 
 .icon:hover {
     transform: scale(1.2);
 }
+
 button {
     outline: none;
     background: white;
     border: none;
 }
-.back-Para{
+
+.back-Para {
     margin-left: 30px;
 }
 
 /* Project Section Started*/
 
 
- /* Add this CSS to adjust the layout and alignment of the #project section */
+/* Add this CSS to adjust the layout and alignment of the #project section */
 #project1 {
     display: flex;
     justify-content: space-between;
@@ -76,7 +78,11 @@ button {
     height: 80vh;
     flex: 1;
     flex-wrap: wrap;
-    margin: -5rem 50px;
+    /* margin: 0rem 50px; */
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 0rem;
+    margin-bottom: 5rem;
 }
 
 .section__pic-container-profile {
@@ -92,8 +98,10 @@ button {
 }
 
 .section__pic-container-profile img {
-    width: 100%; /* Set the width to 100% */
-    height: 100%; /* Set the height to 100% */
+    width: 100%;
+    /* Set the width to 100% */
+    height: 100%;
+    /* Set the height to 100% */
     object-fit: cover;
     overflow: hidden;
 }
@@ -103,6 +111,7 @@ button {
     flex: 1;
     max-width: 40%;
 }
+
 .section__text {
     align-self: center;
     text-align: center;
@@ -120,14 +129,17 @@ button {
     font-size: 1.75rem;
     margin-bottom: 1rem;
 }
+
 .section__text__p3 {
     font-size: 1rem;
     margin-bottom: 1rem;
 }
+
 .section__text__p4 {
     font-size: 1.5rem;
     margin-bottom: 1rem;
 }
+
 .title {
     font-size: 3rem;
     text-align: center;
@@ -156,7 +168,8 @@ button {
     border-radius: 2rem;
     transition: all 0.5s ease-in-out;
 }
-.btn:hover{
+
+.btn:hover {
     transform: scale(1.2rem);
 
 }
@@ -170,7 +183,7 @@ button {
 .btn-color-1:hover,
 .btn-color-2:hover {
     cursor: pointer;
-    
+
 }
 
 .btn-color-1,
@@ -208,7 +221,71 @@ button {
 }
 
 
+
+/* Responsive -> MediaQuery*/
+/* For screens up to 1400px wide */
+@media screen and (max-width: 1400px) {
+
+    /* Add styles for this screen width here */
+    #project1 {
+        height: 83vh;
+        margin-bottom: 6rem;
+    }
+
+    .section__pic-container-profile {
+        transform: scale(1);
+    }
+
+    .btn-containerBack {
+        margin-top: 1rem;
+    }
+}
+
+/* For screens up to 1200px wide */
+@media screen and (max-width: 1200px) {
+
+    /* Add styles for this screen width here */
+    #desktop-nav {
+        display: none;
+    }
+
+    #hamburger-nav {
+        display: flex;
+    }
+
+    .experience-details-container {
+        margin-top: 2rem;
+    }
+
+    #project1,
+    .section-container {
+        display: block;
+    }
+
+    #project1 .title {
+        font-size: 2rem;
+    }
+
+    #project1 .section__text__p3 {
+        font-size: 1rem;
+    }
+
+    .btn-containerBack {
+        margin-top: 1rem;
+    }
+}
+
+/* For screens up to 860px wide */
+@media screen and (max-width: 860px) {
+
+    /* Add styles for this screen width here */
+    .contactRow {
+        flex-direction: column;
+    }
+}
+
 @media (max-width: 768px) {
+
     /* Adjust for smaller screens */
     .section__pic-container-profile,
     .section__text {
@@ -216,5 +293,111 @@ button {
         max-width: 100%;
     }
 }
-/* Your existing CSS code */
 
+/* For screens up to 600px wide */
+@media screen and (max-width: 600px) {
+
+    /* Add styles for this screen width here */
+    #project1,
+    #project2,
+    #project3,
+    #project4,
+    #project5,
+    #project6 {
+        margin-top: 2rem;
+        height: auto;
+    }
+
+    #project1 .title,
+    #project2 .title,
+    #project3 .title,
+    #project4 .title,
+    #project5 .title,
+    #project6 .title {
+        font-size: 2rem;
+    }
+
+    #project1 .section__pic-container-profile img,
+    #project2 .section__pic-container-profile img,
+    #project3 .section__pic-container-profile img,
+    #project4 .section__pic-container-profile img,
+    #project5 .section__pic-container-profile img,
+    #project6 .section__pic-container-profile img {
+        width: auto;
+        height: 46vw;
+    }
+
+    .btn-containerBack {
+        margin-top: 2rem;
+    }
+
+    .section__text__p2 {
+        font-size: 1.25rem;
+    }
+
+    .section__text__p3 {
+        font-size: 1rem;
+    }
+
+    .title {
+        font-size: 2rem;
+    }
+}
+
+/* For screens up to 480px wide */
+@media screen and (max-width: 480px) {
+
+    /* Add styles for this screen width here */
+    body {
+        overflow-x: hidden;
+    }
+
+    #project1 .section__pic-container-profile img,
+    #project2 .section__pic-container-profile img,
+    #project3 .section__pic-container-profile img,
+    #project4 .section__pic-container-profile img,
+    #project5 .section__pic-container-profile img,
+    #project6 .section__pic-container-profile img {
+        display: flex;
+        height: 300px;
+        width: 300px;
+        margin-left: 50px;
+        justify-content: center;
+    }
+
+    #project1 .section__pic-container-profile:hover,
+    #project2 .section__pic-container-profile:hover,
+    #project3 .section__pic-container-profile:hover,
+    #project4 .section__pic-container-profile:hover,
+    #project5 .section__pic-container-profile:hover,
+    #project6 .section__pic-container-profile:hover {
+        transform: scale(0.9);
+    }
+
+    #project1,
+    #project2,
+    #project3,
+    #project4,
+    #project5,
+    #project6 {
+        margin-top: 2rem;
+    }
+
+    #project1 .section__pic-container-profile img,
+    #project2 .section__pic-container-profile img,
+    #project3 .section__pic-container-profile img,
+    #project4 .section__pic-container-profile img,
+    #project5 .section__pic-container-profile img,
+    #project6 .section__pic-container-profile img {
+        width: auto;
+        height: 300px;
+    }
+
+    .contactContainer {
+        margin-top: 1rem;
+    }
+
+    .experience-sub-title {
+        font-size: 1.2rem;
+    }
+}
