--- a/styleWeb.css
+++ b/styleWeb.css
@@ -139,10 +139,25 @@ button {
     margin-bottom: 1rem;
 }
 
+
 .section__text__p4 {
     text-align: center;
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    margin-top: 6rem;
+}
+
+.section__text__p5 {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.section__text__p6 {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    margin-top: 3rem;
 }
 
 .title {
