iOS Devlopment Added

--- a/style.css
+++ b/style.css
@@ -199,10 +199,12 @@ section {
 
 .section__text__p1 {
     text-align: center;
+    font-size: 1.25rem;
+    margin-bottom: 1rem;
 }
 
 .section__text__p2 {
-    font-size: 1.75rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
 }
 
