--- a/style.css
+++ b/style.css
@@ -430,6 +430,37 @@ article {
 article .icon {
     cursor: default;
 }
+.skill-article {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+  }
+
+.skill-section {
+    display: flex;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  
+  .skill-heading {
+    flex: 2;
+    text-align: left;
+    margin-right: 20px;
+  }
+  
+  .skill-details {
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 20px;
+    
+  }
+  
+  .skill-details article {
+    margin-bottom: 10px;
+  }
 
 /* PROJECTS SECTION */
 
